--- a/web/style.css
+++ b/web/style.css
@@ -564,12 +564,6 @@ a:active {
   line-height: 2rem;
 }
 
-@media (min-width: 1200px) {
-  .puslapis-paslaugos .puslapis-turinys .paslaugos {
-    padding: 1rem 0rem;
-  }
-}
-
 @media (min-width: 768px) {
   .puslapis-paslaugos .puslapis-turinys {
     -webkit-box-orient: horizontal;
@@ -681,6 +675,54 @@ a:active {
 @media (min-width: 1200px) {
   .puslapis-kainorastis .puslapis-turinys .kainorastis {
     padding: 0px;
+  }
+}
+
+.puslapis-galerija {
+  position: relative;
+  width: 100%;
+  z-index: 4;
+}
+
+.puslapis-galerija h1 {
+  margin: 0rem 1rem;
+}
+
+.puslapis-galerija .galerija-turinys {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 1rem;
+}
+
+.puslapis-galerija .galerija-turinys .galerija-nuotrauka {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  padding: 1rem;
+}
+
+.puslapis-galerija .galerija-turinys .galerija-nuotrauka img {
+  width: 100%;
+  border-radius: 1rem;
+}
+
+@media (min-width: 768px) {
+  .puslapis-galerija .galerija-turinys .galerija-nuotrauka {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .puslapis-galerija .galerija-turinys .galerija-nuotrauka {
+    -ms-flex-preferred-size: 33.33%;
+        flex-basis: 33.33%;
   }
 }
 
