--- a/web/style.css
+++ b/web/style.css
@@ -13,6 +13,8 @@ html {
 }
 
 body {
+  width: 100%;
+  height: 100%;
   font-family: "Quicksand", sans-serif;
 }
 
@@ -35,7 +37,7 @@ a:link, a:visited {
 }
 
 a:hover {
-  color: #e7b24f;
+  color: #faa749;
   -webkit-transition: color 0.2s ease;
   transition: color 0.2s ease;
 }
@@ -64,6 +66,7 @@ a:active {
 }
 
 .navigacija .navigacija-wrap {
+  max-width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -73,8 +76,6 @@ a:active {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   padding: .25rem;
   margin: 0 auto;
   -webkit-transition: padding 200ms ease;
@@ -83,6 +84,8 @@ a:active {
 
 @media (min-width: 1200px) {
   .navigacija .navigacija-wrap {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     padding: 1rem;
   }
 }
@@ -101,7 +104,7 @@ a:active {
   height: 100%;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .navigacija .navigacija-logo {
     -webkit-box-flex: inherit;
         -ms-flex-positive: inherit;
@@ -129,7 +132,7 @@ a:active {
 }
 
 .navigacija .navigacija-hamburgeris .hamburgeris-containeris:hover .hamburgeris-ikona, .navigacija .navigacija-hamburgeris .hamburgeris-containeris:hover .hamburgeris-ikona::after, .navigacija .navigacija-hamburgeris .hamburgeris-containeris:hover .hamburgeris-ikona::before {
-  background: #e7b24f;
+  background: #faa749;
   -webkit-transition: background 0.2s ease;
   transition: background 0.2s ease;
 }
@@ -139,6 +142,7 @@ a:active {
   height: .25rem;
   background: black;
   border-radius: 1rem;
+  cursor: pointer;
 }
 
 .navigacija .navigacija-hamburgeris .hamburgeris-ikona::before, .navigacija .navigacija-hamburgeris .hamburgeris-ikona::after {
@@ -185,6 +189,23 @@ a:active {
   padding: .5rem .75rem;
   -webkit-transition: padding 200ms ease;
   transition: padding 200ms ease;
+}
+
+.navigacija .navigacija-meniu li a:after {
+  display: block;
+  content: "";
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  border-bottom: solid 2px #faa749;
+  -webkit-transition: -webkit-transform 200ms ease;
+  transition: -webkit-transform 200ms ease;
+  transition: transform 200ms ease;
+  transition: transform 200ms ease, -webkit-transform 200ms ease;
+}
+
+.navigacija .navigacija-meniu li:hover a:after {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
 }
 
 .navigacija .navigacija-meniu li a {
@@ -247,6 +268,9 @@ a:active {
 
 @media (min-width: 1200px) {
   .navigacija .navigacija-kontaktai {
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -261,12 +285,10 @@ a:active {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   top: 0;
   left: 0;
-  background: #43893f;
-  color: white;
-  padding: 1rem;
+  background: white;
   overflow: auto;
 }
 
@@ -276,19 +298,21 @@ a:active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 1rem;
+  background: white;
+  -webkit-box-shadow: 0rem 1rem 5rem rgba(0, 0, 0, 0.356);
+          box-shadow: 0rem 1rem 5rem rgba(0, 0, 0, 0.356);
+  margin-bottom: 2rem;
 }
 
 .navigacija .navigacija-mobili .navigacija-grizimas .navigacija-logo {
   width: auto;
   height: 5rem;
-  background: white;
   padding: .5rem;
   border-radius: 1rem;
 }
@@ -298,7 +322,7 @@ a:active {
 }
 
 .navigacija .navigacija-mobili .navigacija-grizimas .hamburgeris-containeris:hover .hamburgeris-ikona::before, .navigacija .navigacija-mobili .navigacija-grizimas .hamburgeris-containeris:hover .hamburgeris-ikona::after {
-  background: #e7b24f;
+  background: #faa749;
 }
 
 .navigacija .navigacija-mobili .navigacija-grizimas .hamburgeris-ikona {
@@ -315,6 +339,7 @@ a:active {
           justify-content: center;
   -webkit-transition: background 200ms ease;
   transition: background 200ms ease;
+  cursor: pointer;
 }
 
 .navigacija .navigacija-mobili .navigacija-grizimas .hamburgeris-ikona::before, .navigacija .navigacija-mobili .navigacija-grizimas .hamburgeris-ikona::after {
@@ -322,7 +347,7 @@ a:active {
   position: absolute;
   width: 5rem;
   height: .5rem;
-  background: white;
+  background: black;
   -webkit-transition: background 200ms ease;
   transition: background 200ms ease;
 }
@@ -337,7 +362,26 @@ a:active {
           transform: rotate(-45deg);
 }
 
+.navigacija .navigacija-mobili ul {
+  min-height: calc(100% - 7rem);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0rem 1rem;
+}
+
 .navigacija .navigacija-mobili li {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -350,17 +394,30 @@ a:active {
 }
 
 .navigacija .navigacija-mobili li a {
+  width: 100%;
   font-size: 1.5rem;
   padding: 1rem;
-  background: #54ac4f;
+  background: #faa749;
   border-radius: 1rem;
   -webkit-transition: background 200ms ease, color 200ms ease;
   transition: background 200ms ease, color 200ms ease;
+  text-align: center;
+  color: black;
 }
 
 .navigacija .navigacija-mobili li a:hover {
-  background: #e7b24f;
+  background: #fbbf7b;
   color: black;
+}
+
+.navigacija .navigacija-mobili .navigacija-svg {
+  margin-bottom: 0px;
+}
+
+.navigacija .navigacija-mobili .navigacija-svg a {
+  font-size: 1.2rem;
+  border-top: 2px solid #43893f;
+  background: white;
 }
 
 .pagrindinis-containeris {
@@ -452,7 +509,7 @@ a:active {
 
 .puslapis-titulinis .titulinis-tekstas h1 {
   font-size: 2rem;
-  color: #e7b24f;
+  color: #faa749;
   text-shadow: 0rem 0.1rem 0rem rgba(0, 0, 0, 0.656);
   text-align: center;
   -webkit-transition: font-size 200ms ease;
@@ -494,7 +551,7 @@ a:active {
 }
 
 .puslapis-apie .puslapis-turinys {
-  background-color: #e7b24f;
+  background-color: #faa749;
   border-radius: 1rem;
   padding: 1.5rem;
   padding-bottom: 8rem;
@@ -502,9 +559,15 @@ a:active {
 }
 
 .puslapis-apie .puslapis-turinys .puslapis-sukis {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   margin-bottom: 1rem;
   text-align: center;
+  padding: 1rem;
+  margin-top: -1.5rem;
+  margin-bottom: 2.5rem;
+  -webkit-box-shadow: 0rem 1rem 5rem rgba(0, 0, 0, 0.356);
+          box-shadow: 0rem 1rem 5rem rgba(0, 0, 0, 0.356);
+  border-radius: 1rem;
 }
 
 .puslapis-apie .puslapis-turinys h1 {
@@ -514,6 +577,7 @@ a:active {
 .puslapis-apie .puslapis-turinys p {
   font-size: 1.25rem;
   line-height: 2rem;
+  text-align: justify;
 }
 
 .puslapis-paslaugos {
@@ -577,6 +641,7 @@ a:active {
 
 .puslapis-paslaugos .puslapis-turinys .paslaugos-iliustracijos-tekstas h1 {
   margin: 1rem 2rem;
+  color: #43893f;
 }
 
 .puslapis-paslaugos .puslapis-turinys .paslaugos-iliustracijos-tekstas .paslaugos-paslauga {
@@ -603,7 +668,7 @@ a:active {
   width: 1.75rem;
   height: 1.75rem;
   border-radius: 100%;
-  background: #e7b24f;
+  background: #faa749;
   margin-right: 1rem;
   font-size: 1.25rem;
 }
@@ -622,16 +687,82 @@ a:active {
 
 .puslapis-paslaugos .puslapis-turinys .paslaugos {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding: 1rem;
 }
 
-.puslapis-paslaugos .puslapis-turinys .paslaugos h3 {
+.puslapis-paslaugos .puslapis-turinys .paslaugos .paslaugos-atstumai {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-right: 1rem;
+}
+
+@media (min-width: 768px) {
+  .puslapis-paslaugos .puslapis-turinys .paslaugos .paslaugos-atstumai {
+    -ms-flex-preferred-size: 45%;
+        flex-basis: 45%;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+
+.puslapis-paslaugos .puslapis-turinys .paslaugos .paslaugos-atstumai h3 {
+  padding: 1rem 1rem;
+  border-radius: 1rem 1rem 0rem 0rem;
+  background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(transparent));
+  background: linear-gradient(180deg, #f3f3f3, transparent);
+  color: #43893f;
   font-size: 2rem;
 }
 
-.puslapis-paslaugos .puslapis-turinys .paslaugos p {
+.puslapis-paslaugos .puslapis-turinys .paslaugos .paslaugos-atstumai p {
   font-size: 1.25rem;
-  line-height: 2rem;
+  line-height: 3rem;
+  border-bottom: 2px solid #43893f;
+  margin: 0rem 1rem;
+}
+
+.puslapis-paslaugos .puslapis-turinys .paslaugos .paslaugos-atstumai p span {
+  float: right;
+}
+
+.puslapis-paslaugos .puslapis-turinys .paslaugos .paslaugos-atstumai p:last-of-type {
+  border-bottom: none;
+}
+
+.puslapis-paslaugos .puslapis-turinys .paslaugos .paslaugos-verkne {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+@media (min-width: 768px) {
+  .puslapis-paslaugos .puslapis-turinys .paslaugos .paslaugos-verkne {
+    -ms-flex-preferred-size: 45%;
+        flex-basis: 45%;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+
+.puslapis-paslaugos .puslapis-turinys .paslaugos .paslaugos-verkne img {
+  border-radius: 1rem;
+  width: 100%;
+  height: auto;
 }
 
 @media (min-width: 768px) {
@@ -662,7 +793,7 @@ a:active {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 2rem 0rem;
+  margin: 2rem 0rem 1rem;
   padding: 1rem;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -671,6 +802,14 @@ a:active {
 .puslapis-kainorastis .puslapis-turinys .kainorastis {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
+}
+
+.puslapis-kainorastis .puslapis-turinys .kainorastis h1 {
+  padding: 1rem 1rem;
+  border-radius: 1rem 1rem 0rem 0rem;
+  background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(transparent));
+  background: linear-gradient(180deg, #f3f3f3, transparent);
+  color: #43893f;
 }
 
 .puslapis-kainorastis .puslapis-turinys .kainorastis h3 {
@@ -690,6 +829,16 @@ a:active {
 .puslapis-kainorastis .puslapis-turinys .kainorastis p {
   margin: .5rem 1rem;
   font-size: 1.25rem;
+  line-height: 2rem;
+  border-bottom: 2px solid #43893f;
+}
+
+.puslapis-kainorastis .puslapis-turinys .kainorastis p:first-of-type {
+  margin-top: 1rem;
+}
+
+.puslapis-kainorastis .puslapis-turinys .kainorastis p:last-of-type {
+  border-bottom: none;
 }
 
 .puslapis-kainorastis .puslapis-turinys .kainorastis .kainos {
@@ -722,7 +871,7 @@ a:active {
   min-width: 5rem;
   -ms-flex-preferred-size: auto;
       flex-basis: auto;
-  background: #e7b24f;
+  background: #faa749;
   padding: .75rem;
   font-size: 1.25rem;
   text-align: center;
@@ -755,7 +904,12 @@ a:active {
 }
 
 .puslapis-galerija h1 {
+  padding: 1rem 1rem;
   margin: 0rem 1rem;
+  border-radius: 1rem 1rem 0rem 0rem;
+  background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(transparent));
+  background: linear-gradient(180deg, #f3f3f3, transparent);
+  color: #43893f;
 }
 
 .puslapis-galerija .galerija-turinys {
@@ -801,6 +955,7 @@ footer {
   width: 100%;
   z-index: 4;
   margin-top: -1rem;
+  overflow-x: hidden;
 }
 
 @media (min-width: 1200px) {
@@ -839,7 +994,7 @@ footer .kontaktai .kontaktai-mygtuku-containeris {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   height: auto;
-  background: #e7b24f;
+  background: #faa749;
 }
 
 footer .kontaktai .kontaktai-mygtuku-containeris a {
@@ -876,12 +1031,12 @@ footer .kontaktai .kontaktai-mygtuku-containeris a .kontaktai-mygtukas p {
 }
 
 footer .kontaktai .kontaktai-mygtuku-containeris a:hover .kontaktai-mygtukas, footer .kontaktai .kontaktai-mygtuku-containeris a:last-of-type:hover .kontaktai-mygtukas {
-  background: #f3d9a9;
-  color: #b78019;
+  background: #fdd7ac;
+  color: #d77506;
 }
 
 footer .kontaktai .kontaktai-mygtuku-containeris a:last-of-type .kontaktai-mygtukas {
-  background: #ecc273;
+  background: #fbba71;
 }
 
 @media (min-width: 768px) {
@@ -901,6 +1056,7 @@ footer .kontaktai .kontaktai-blokai {
 }
 
 footer .kontaktai .kontaktai-blokai .kontaktai-blokas-pirmas, footer .kontaktai .kontaktai-blokai .kontaktai-blokas-antras {
+  width: 100%;
   padding: 0rem 2rem;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
@@ -918,6 +1074,7 @@ footer .kontaktai .kontaktai-blokai .kontaktai-blokas-pirmas {
 }
 
 footer .kontaktai .kontaktai-blokai .kontaktai-meniu {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -939,12 +1096,18 @@ footer .kontaktai .kontaktai-blokai .kontaktai-meniu li h3 {
 }
 
 footer .kontaktai .kontaktai-blokai .kontaktai-meniu li a {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+footer .kontaktai .kontaktai-blokai .kontaktai-meniu li span {
+  width: 100%;
+  white-space: pre-wrap;
 }
 
 footer .kontaktai .kontaktai-blokai .kontaktai-meniu li img {
